fix margin spacing for nav

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,13 +28,11 @@ p{
 nav {
     background-color: lavender;
     color: rgb(128, 92, 136);
-    margin-left: 50px;
     /* text-align: center; */
 }
 nav a{
     background-color: lavender;
     color: rgb(128, 92, 136);
-    margin-left: 50px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
 }
